# SnowGlobe

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindowform.ui  osgwidget.cpp  osgwidget.h  physics.cpp  physics.h  physics_unittests.cpp  sphere.cpp  sphere.h  spheregenerator.cpp  spheregenerator.h  spheregenerator.ui  sphereupdatecallback.cpp  sphereupdatecallback.h  vector.cpp  vector.h  vector_unittests.cpp  worldsettings.cpp  worldsettings.h  worldsettings.ui
QtGUIExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindowform.ui  stuffpanel.cpp  stuffpanel.h  stuffpanel.ui
icons/: icons.qrc
